# apcore-mcp-rust

./: .code-forge.json  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
docs/features/: adapters.md  apcore-mcp.md  auth.md  cli.md  constants.md  converters.md  execution-router.md  explorer.md  helpers.md  server-factory.md  server.md  transport.md
docs/history/planning/: overview.md
docs/history/planning/adapters/: state.json
examples/: README.md  run.rs
examples/binding_demo/: main.rs  myapp.rs
examples/binding_demo/extensions/: convert_temperature.binding.yaml  word_count.binding.yaml
examples/extensions/: main.rs  modules.rs
examples/run/: main.rs  modules.rs
hooks/: pre-commit
planning/: overview.md
planning/adapters/: overview.md  plan.md
planning/adapters/tasks/: annotations-mapper.md  approval-handler.md  schema-converter.md
planning/apcore-mcp/: overview.md
planning/apcore-mcp/tasks/: builder-pattern.md  config-and-error-types.md  convenience-functions.md  struct-and-accessors.md  to-openai-tools.md
planning/auth/: overview.md  state.json
planning/auth/tasks/: add-jwt-authenticator-tests.md  add-middleware-tests.md  implement-jwt-authenticator.md
planning/cli/: overview.md  plan.md
planning/cli/tasks/: add-cli-integration-tests.md  add-cli-unit-tests.md  implement-cli-args.md  implement-run-function.md  update-binary-entrypoint.md
planning/constants/: overview.md  state.json
planning/constants/tasks/: error-codes.md  integration.md  patterns.md  setup.md
planning/converters/: plan.md  state.json
planning/converters/tasks/: converter-types.md  integration-tests.md
planning/execution-router/: overview.md
planning/execution-router/tasks/: context-construction.md  integration-tests.md  non-streaming-path.md  output-formatting.md  streaming-path.md
planning/explorer/: overview.md  state.json
planning/explorer/tasks/: add-explorer-tests.md  implement-api-handlers.md  implement-html-template.md  update-module-exports.md
planning/helpers/: overview.md  plan.md  state.json
planning/helpers/tasks/: define-callback-types.md  define-constants.md  implement-elicit.md  unit-tests.md
planning/server/: overview.md  plan.md  state.json
planning/server-factory/: overview.md  state.json
planning/server-factory/tasks/: ai-intent-metadata.md  init-options.md  register-resources.md
planning/server/tasks/: add-integration-tests.md  add-registry-listener-tests.md  add-server-unit-tests.md  update-module-exports.md
planning/transport/tasks/: add-transport-integration-tests.md  define-transport-error.md  implement-health-metrics.md  implement-sse-transport.md  implement-stdio-transport.md  implement-streamable-http-transport.md  refactor-transport-manager-struct.md
src/: acl_builder.rs  apcore_mcp.rs  cli.rs  config.rs  constants.rs  helpers.rs  lib.rs  markdown.rs  middleware_builder.rs  utils.rs
src/adapters/: annotations.rs  approval.rs  errors.rs  formatter.rs  id_normalizer.rs  mod.rs  schema.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  protocol.rs
src/converters/: mod.rs  openai.rs
src/explorer/: api.rs  mod.rs  mount.rs  templates.rs
src/inspector/: mod.rs
src/server/: async_task_bridge.rs  factory.rs  listener.rs  mod.rs  router.rs  server.rs  transport.rs  types.rs
tests/: acl_conformance.rs  adapters_test.rs  auth_test.rs  cli_integration.rs  converters_test.rs  middleware_conformance.rs  output_format_test.rs  server_test.rs
tests/common/: mod.rs
(+54 files in other folders)
